syntax = "proto3";
package chain4energy.c4echain.cfeairdrop;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/chain4energy/c4e-chain/x/cfeairdrop/types";

message UserEntry {
  string address = 1;
  string claim_address = 2;
  repeated ClaimRecord claim_records = 3;
}

message ClaimRecord {
  uint64 campaign_id = 1;
  string address = 2;
  repeated cosmos.base.v1beta1.Coin amount = 3 [ // amount
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated uint64 completedMissions = 4;
  repeated uint64 claimedMissions = 5;
}