syntax = "proto3";
package chain4energy.c4echain.cfeairdrop;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "c4echain/cfeairdrop/campaign.proto";
import "c4echain/cfeairdrop/mission.proto";
import "c4echain/cfeairdrop/claim_record.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/chain4energy/c4e-chain/x/cfeairdrop/types";

// Msg defines the Msg service.
service Msg {
  rpc Claim(MsgClaim) returns (MsgClaimResponse);
  rpc InitialClaim(MsgInitialClaim) returns (MsgInitialClaimResponse);
  rpc CreateCampaign(MsgCreateCampaign) returns (MsgCreateCampaignResponse);
  rpc EditCampaign(MsgEditCampaign) returns (MsgEditCampaignResponse);
  rpc AddMissionToCampaign(MsgAddMissionToCampaign) returns (MsgAddMissionToCampaignResponse);
  rpc AddClaimRecords(MsgAddClaimRecords) returns (MsgAddClaimRecordsResponse);
  rpc DeleteClaimRecord(MsgDeleteClaimRecord) returns (MsgDeleteClaimRecordResponse);
  rpc CloseCampaign(MsgCloseCampaign) returns (MsgCloseCampaignResponse);
  rpc StartCampaign(MsgStartCampaign) returns (MsgStartCampaignResponse);
  rpc RemoveCampaign(MsgRemoveCampaign) returns (MsgRemoveCampaignResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

message MsgClaim {
  string claimer = 1;
  uint64 campaign_id = 2;
  uint64 mission_id = 3;
}

message MsgClaimResponse {}

message MsgInitialClaim {
  string claimer = 1;
  uint64 campaign_id = 2;
  string addressToClaim = 3;
}

message MsgInitialClaimResponse {}

message MsgCreateCampaign {
  string owner = 1;
  string name = 2;
  string description = 3;
  CampaignType campaignType = 4;
  string feegrant_amount = 5 [
    (gogoproto.nullable) = true,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  string initial_claim_free_amount = 6 [
    (gogoproto.nullable) = true,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  google.protobuf.Timestamp start_time = 7 [
    (gogoproto.nullable) = true,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp end_time = 8 [
    (gogoproto.nullable) = true,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Duration lockup_period = 9 [
    (gogoproto.nullable) = true,
    (gogoproto.stdduration) = true
  ];
  google.protobuf.Duration vesting_period = 10 [
    (gogoproto.nullable) = true,
    (gogoproto.stdduration) = true
  ];
}

message MsgCreateCampaignResponse {}

message MsgAddMissionToCampaign {
  string owner = 1;
  uint64 campaignId = 2;
  string name = 3;
  string description = 4;
  MissionType missionType = 5;
  string weight = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = true
  ];
  google.protobuf.Timestamp claim_start_date = 7 [
    (gogoproto.nullable) = true,
    (gogoproto.stdtime) = true
  ];
}

message MsgAddMissionToCampaignResponse {}

message MsgAddClaimRecords {
  string owner = 1;
  uint64 campaign_id = 2;
  repeated ClaimRecord claim_records = 3;
}

message MsgAddClaimRecordsResponse {}

message MsgDeleteClaimRecord {
  string owner = 1;
  uint64 campaignId = 2;
  string userAddress = 3;
}

message MsgDeleteClaimRecordResponse {}

message MsgCloseCampaign {
  string owner = 1;
  uint64 campaign_id = 2;
  CampaignCloseAction campaign_close_action = 3;
}

message MsgCloseCampaignResponse {}

message MsgStartCampaign {
  string owner = 1;
  uint64 campaignId = 2;
}

message MsgStartCampaignResponse {}

message MsgRemoveCampaign {
  string owner = 1;
  uint64 campaignId = 2;
}

message MsgRemoveCampaignResponse {}

message MsgEditCampaign {
  string owner = 1;
  uint64 campaignId = 2;
  string name = 3;
  string description = 4;
  string feegrant_amount = 5 [
    (gogoproto.nullable) = true,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  string initial_claim_free_amount = 6 [
    (gogoproto.nullable) = true,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  google.protobuf.Timestamp start_time = 7 [
    (gogoproto.nullable) = true,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp end_time = 8 [
    (gogoproto.nullable) = true,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Duration lockup_period = 9 [
    (gogoproto.nullable) = true,
    (gogoproto.stdduration) = true
  ];
  google.protobuf.Duration vesting_period = 10 [
    (gogoproto.nullable) = true,
    (gogoproto.stdduration) = true
  ];
}

message MsgEditCampaignResponse {}
// this line is used by starport scaffolding # proto/tx/message
